--- a/index.html
+++ b/index.html
@@ -286,19 +286,19 @@
     				<div class="col-sm-12 col-md-12 col-lg-4">
     					<div class="map_main">
     						<img src="images/map-icon.png">
-    						<span class="londan_text">London 145 United Kingdom</span>
+    						<span class="londan_text">Gedung Gajah, 4th Floor Jl. Dr. Saharjo No 111 Tebet, Jakarta Selatan Indonesia 12817</span>
     					</div>
     				</div>
     				<div class="col-sm-6 col-md-6 col-lg-4">
     					<div class="map_main">
     						<img src="images/phone-icon.png">
-    						<span class="londan_text">+7586656566</span>
+    						<span class="londan_text">+62 (21) 28543141</span>
     					</div>
     				</div>
     				<div class="col-sm-6 col-md-6 col-lg-4">
     					<div class="map_main">
     						<img src="images/email-icon.png">
-    						<span class="londan_text">demo@gmail.com</span>
+    						<span class="londan_text">support@spk.com</span>
     					</div>
     				</div>
     			</div>
@@ -306,7 +306,7 @@
     		<div class="contact_product">
     			<div class="row">
     				<div class="col-sm-6 col-md-6 col-lg-2">
-    					<div class="footer-logo"><img src="images/footer-logo.png" style="max-width: 100%;"></div>
+    					<div class="footer-logo"><img src="images/Artboard.png" style="max-width: 50%;"></div>
     				</div>
     				<div class="col-sm-6 col-md-6 col-lg-4">
     					<h1 class="useful_text">USEFUL LINK</h1>
@@ -320,17 +320,6 @@
     				</div>	
     				</div>
     				<div class="col-sm-12 col-md-12 col-lg-6">
-    					<h1 class="useful_text">PRODUCT</h1>
-    					<div class="menu multi_column_menu">
-    					   <ul>
-    						  <li class="footer_menu"><a href="#"><img src="images/bulit-icon.png" class="footer_menu">Webhosting</a></li>
-    						  <li class="footer_menu"><a href="#"><img src="images/bulit-icon.png" class="footer_menu">Reseler Hosting</a></li>
-    						  <li class="footer_menu"><a href="#"><img src="images/bulit-icon.png" class="footer_menu">VPS Hosting</a></li>
-    						  <li class="footer_menu"><a href="#"><img src="images/bulit-icon.png" class="footer_menu">Wordpress Hosting</a></li>
-    						  <li class="footer_menu"><a href="#"><img src="images/bulit-icon.png" class="footer_menu">Dedicated hosting</a></li>
-    						  <li class="footer_menu"><a href="#"><img src="images/bulit-icon.png" class="footer_menu">Windows</a></li>
-    					   </ul>
-    				    </div>
     				    <div class="input-group mb-3 margin-top-30">
                            <input type="text" class="form-control" placeholder="Enter you email">
                            <div class="input-group-append">
