update tulisan typo

--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
     			    <div class="power_full">
     				    <div class="icon"><a href="#"><img src="images/key.png"></a></div>
     				    <h2 class="powerful_text">Powerful Features</h2>
-    				    <p class="making_tetx">making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still </p>
-    			    </div>
+    				    <p class="making_tetx">We provide cybersecurity solutions to help businesses & governments protect their sensitive data from cyber threats such as malware, ransomware, and phishing attacks.
     		    </div>
     		    <div class="col-sm-3">
     			    <div class="power_full">
@@ -139,7 +138,7 @@
     			</div>
     			<div class="col-md-6">
     				<div class="right_section_main">
-						<h2 class="special_text">"I highly recommend ICT Solutions & Services and Homeland Security by Putra Mahardika Abadi. Their team of experts provided us with comprehensive solutions that empowered our security and success in a digital world. Thank you for all your hard work!"</h2>
+						<h2 class="special_text">"I highly recommend ICT Solutions & Services and Homeland Security by Synergi Putra Kharisma. Their team of experts provided us with comprehensive solutions that empowered our security and success in a digital world. Thank you for all your hard work!"</h2>
     					<h5 class="dolar_tetx"><strong style="color: #9b0303;">Tom Ato / CEO, Pomodoro</strong></h5>
     				</div>
     			</div>
