update tulisan typo

--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
     			    <div class="power_full">
     				    <div class="icon"><a href="#"><img src="images/key.png"></a></div>
     				    <h2 class="powerful_text">Powerful Features</h2>
-    				    <p class="making_tetx">We provide cybersecurity solutions to help businesses & governments protect their sensitive data from cyber threats such as malware, ransomware, and phishing attacks.
+    				    <p class="making_tetx">We provide cybersecurity solutions to help businesses & governments protect their sensitive data from cyber threats such as malware, ransomware, and phishing attacks. </p>
+    			    </div>
     		    </div>
     		    <div class="col-sm-3">
     			    <div class="power_full">
